--- a/sse-app/src/main/resources/static/index.html
+++ b/sse-app/src/main/resources/static/index.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Sse app </title>
-<!--    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
-    <link rel=stylesheet
-          href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css
-          integrity=undefined crossorigin=anonymous>
+    <!--    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css
+        integrity=undefined crossorigin=anonymous>
     <link href="/main.css" rel="stylesheet">
-<!--    <script src="/webjars/jquery/jquery.min.js"></script>-->
+    <!--    <script src="/webjars/jquery/jquery.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
     <style>
-        .list-group{
-    max-height: 300px;
-    margin-bottom: 10px;
-    overflow:scroll;
-    -webkit-overflow-scrolling: touch;
-    }
-    table, th, td {
-  border: 1px solid black;
-}
+        .list-group {
+            max-height: 300px;
+            margin-bottom: 10px;
+            overflow: scroll;
+            -webkit-overflow-scrolling: touch;
+        }
 
+        table,
+        th,
+        td {
+            border: 1px solid black;
+        }
     </style>
 </head>
+
 <body>
-<div id="main-content" class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <h4>Comments app</h4>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <table id="chat" class="list-group">
-                <thead>
-                <tr>
-                    <th>Comment</th>
-                    <th>time</th>
-                </tr>
-                </thead>
-                <tbody id="helloworldmessage">
+    <section style="background-color: #eee;">
+        <div class="container my-5 py-5">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-12 col-lg-10 col-xl-8">
+                    <div class="card">
+                        <div class="card-body overflow-auto border-bottom"  id="comments">
+                            <div class="d-flex flex-start align-items-center">
+                                <div>
+                                    <h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
+                                    <p class="text-muted small mb-0">
+                                        Shared publicly - Jan 2020
+                                    </p>
+                                </div>
+                            </div>
 
-                </tbody>
-            </table>
-            <ul>
-                <li>
-                    asd
-                </li>
-                <li>
-                    asd2
-                </li>
-            </ul>
-        </div>
-        <div class="row">
+                            <p class="mt-3 mb-4 pb-2 border-bottom">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            </p>
 
-            <div class="col-md-6">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <textarea id="user" placeholder="Write your comment here" required></textarea>
+                            <div class="d-flex flex-start align-items-center">
+                                <div>
+                                    <h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
+                                    <p class="text-muted small mb-0">
+                                        Shared publicly - Jan 2020
+                                    </p>
+                                </div>
+                            </div>
+
+                            <p class="mt-3 mb-4 pb-2 border-bottom">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            </p>
+
+
+                        </div>
+                        <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+                            <div class="d-flex flex-start w-100">
+                                <div class="form-outline w-100">
+                                    <textarea class="form-control" id="textAreaExample" rows="4"
+                                        style="background: #fff;"></textarea>
+                                    <label class="form-label" for="textAreaExample">Message</label>
+                                </div>
+                            </div>
+                            <div class="float-end mt-2 pt-1">
+                                <button type="button" class="btn btn-primary btn-sm">Post comment</button>
+                                <button type="button" class="btn btn-outline-primary btn-sm">Cancel</button>
+                            </div>
+                        </div>
                     </div>
-                    <button id="send" type="submit">Send</button>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-
-</div>
+    </section>
 </body>
+
 </html>
