--- a/sse-app/src/main/resources/static/index.html
+++ b/sse-app/src/main/resources/static/index.html
@@ -3,26 +3,11 @@
 
 <head>
     <title>Sse app </title>
-    <!--    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
-    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css
-        integrity=undefined crossorigin=anonymous>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="/main.css" rel="stylesheet">
-    <!--    <script src="/webjars/jquery/jquery.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="app.js"></script>
     <style>
-        /* .list-group {
-            max-height: 300px;
-            margin-bottom: 10px;
-            overflow: scroll;
-            -webkit-overflow-scrolling: touch;
-        } */
-
-        /* table,
-        th,
-        td {
-            border: 1px solid black;
-        } */
 
         html {
             overflow: hidden;
@@ -50,31 +35,6 @@
                 <div class="col-md-12 col-lg-10 col-xl-8">
                     <div id="card" class="card" style="height: 80vh;">
                         <div class="card-body border-bottom comments-box" id="comments">
-                            <div class="d-flex flex-start align-items-center">
-                                <div>
-                                    <h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
-                                    <p class="text-muted small mb-0">
-                                        Shared publicly - Jan 2020
-                                    </p>
-                                </div>
-                            </div>
-
-                            <p class="mt-3 mb-4 pb-2 border-bottom">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            </p>
-
-                            <div class="d-flex flex-start align-items-center">
-                                <div>
-                                    <h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
-                                    <p class="text-muted small mb-0">
-                                        Shared publicly - Jan 2020
-                                    </p>
-                                </div>
-                            </div>
-
-                            <p class="mt-3 mb-4 pb-2 border-bottom">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            </p>
 
 
                         </div>
@@ -89,6 +49,9 @@
                             <div class="float-end mt-2 pt-1">
                                 <button id="post-comment" type="button" class="btn btn-primary btn-sm">Post
                                     comment</button>
+                            </div>
+                            <div class="float-end mt-2 pt-1">
+                                <input id="user-name" type="input" class="input" placeholder="Guest"></input>
                             </div>
                         </div>
                     </div>
