--- a/sse-app/src/main/resources/static/index.html
+++ b/sse-app/src/main/resources/static/index.html
@@ -10,12 +10,12 @@
     <style>
 
         html {
-            overflow: hidden;
+            /* overflow: hidden; */
             height: 100%;
         }
 
         body {
-            overflow: hidden;
+            /* overflow: hidden; */
             height: 100%;
         }
 
